--- a/Stock/Stock.csproj
+++ b/Stock/Stock.csproj
@@ -209,11 +209,13 @@
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StockController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\StockHub.cs" />
     <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Models\Share.cs" />
@@ -225,7 +227,9 @@
     <Compile Include="Services\IAuthenticationServiceProvider.cs" />
     <Compile Include="Services\IConnectionServiceProvider.cs" />
     <Compile Include="Services\IShareValueServiceProvider.cs" />
+    <Compile Include="Services\IUserNotificationServiceProvider.cs" />
     <Compile Include="Services\ShareValueServiceProvider.cs" />
+    <Compile Include="Services\UserNotificationServiceProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -254,6 +258,8 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\Stock\RenderStockPrices.js" />
+    <Content Include="Scripts\Stock\RenderWallet.js" />
     <Content Include="Scripts\Stock\StartConnectionToStockHub.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
@@ -275,6 +281,7 @@
     <Content Include="Views\Shared\_ManageAccount.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Stock\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
