--- a/Stock/Stock.csproj
+++ b/Stock/Stock.csproj
@@ -203,6 +203,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\ApplicationGlobals.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -220,6 +221,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Connection.cs" />
+    <Compile Include="Models\OwnedShare.cs" />
     <Compile Include="Models\Share.cs" />
     <Compile Include="Models\ShareViewModels.cs" />
     <Compile Include="Models\Stock.cs" />
@@ -265,6 +267,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Stock\BuyShares.js" />
+    <Content Include="Scripts\Stock\ConnectionProblem.js" />
     <Content Include="Scripts\Stock\RenderStockPrices.js" />
     <Content Include="Scripts\Stock\RenderWallet.js" />
     <Content Include="Scripts\Stock\ShowChart.js" />
