--- a/Stock/Stock.csproj
+++ b/Stock/Stock.csproj
@@ -224,7 +224,6 @@
     <Compile Include="Models\OwnedShare.cs" />
     <Compile Include="Models\Share.cs" />
     <Compile Include="Models\ShareViewModels.cs" />
-    <Compile Include="Models\Stock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthenticationServiceProvider.cs" />
     <Compile Include="Services\ConnectionServiceProvider.cs" />
@@ -267,7 +266,8 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Stock\BuyShares.js" />
-    <Content Include="Scripts\Stock\ConnectionProblem.js" />
+    <Content Include="Scripts\Stock\Confirmation.js" />
+    <Content Include="Scripts\Stock\ConnectionStatus.js" />
     <Content Include="Scripts\Stock\RenderStockPrices.js" />
     <Content Include="Scripts\Stock\RenderWallet.js" />
     <Content Include="Scripts\Stock\ShowChart.js" />
