--- a/Stock/Stock.csproj
+++ b/Stock/Stock.csproj
@@ -225,16 +225,16 @@
     <Compile Include="Models\Share.cs" />
     <Compile Include="Models\ShareViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\AuthenticationServiceProvider.cs" />
-    <Compile Include="Services\ConnectionServiceProvider.cs" />
-    <Compile Include="Services\IAuthenticationServiceProvider.cs" />
-    <Compile Include="Services\IConnectionServiceProvider.cs" />
-    <Compile Include="Services\IShareMarketingServiceProvider.cs" />
-    <Compile Include="Services\IShareValueServiceProvider.cs" />
-    <Compile Include="Services\IUserNotificationServiceProvider.cs" />
-    <Compile Include="Services\ShareMarketingServiceProvider.cs" />
-    <Compile Include="Services\ShareValueServiceProvider.cs" />
-    <Compile Include="Services\UserNotificationServiceProvider.cs" />
+    <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="Services\ConnectionService.cs" />
+    <Compile Include="Services\IAuthenticationService.cs" />
+    <Compile Include="Services\IConnectionService.cs" />
+    <Compile Include="Services\IShareMarketingService.cs" />
+    <Compile Include="Services\IShareValueService.cs" />
+    <Compile Include="Services\IUserNotificationService.cs" />
+    <Compile Include="Services\ShareMarketingService.cs" />
+    <Compile Include="Services\ShareValueService.cs" />
+    <Compile Include="Services\UserNotificationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
